# ks-convert

./: LICENSE  README.md  TODO.md  ks-convert.cabal
doc/dev/: notes.md
src/: ks-convert.hs  ks-insp-cnv.hs
src/KS/Legacy/: Document.hs  Inspection.hs  Place.hs
