name:                ks-convert
version:             1.1
cabal-version:       >= 1.8
build-type:          Custom
license:             BSD3
license-file:        LICENSE
copyright:           2015 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://hub.darcs.net/dino/ks-convert
synopsis:            Conversion utility for KitchenSnitch documents
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.10.1
extra-source-files:  changelog.md
                     doc/dev/notes.md
                     README.md
                     TODO.md
                     util/gentags.sh

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/ks-convert

executable           ks-doc-cnv
   main-is:          ks-doc-cnv.hs
   hs-source-dirs:   src
   other-modules:    KS.Legacy.Document
                     KS.Legacy.Inspection
                     KS.Legacy.Place
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , geojson
                     , ks-library >= 1.1
                     , text
                     , time
   ghc-options:      -Wall

executable           ks-insp-cnv
   main-is:          ks-insp-cnv.hs
   hs-source-dirs:   src
   other-modules:    KS.Legacy.Inspection
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , ks-library >= 1.1
                     , text
                     , time
   ghc-options:      -Wall
